--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "api-project",
+  "name": "rest-api-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A REST API project with Node.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "node src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "body-parser": "^1.20.2",
     "morgan": "^1.10.0"
   }
 }
